Anonymous | Login | 2021-01-18 06:09 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0029406 | Open CASCADE | [OCCT] OCCT:Foundation Classes | public | 2017-12-29 13:51 | 2020-09-11 16:13 | ||||||||
Reporter | abv | ||||||||||||
Assigned To | isn | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | assigned | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | |||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0029406: Foundation Classes - gp_Ax3 fails setting direction | ||||||||||||
Description | The following simple code fails due to stupid implementation of gp_Ax3 which does not check that newly set direction is parallel to currently set X direction, and tries to use their cross product to define new Y: gp_Ax3 anAx; anAx.SetDirection (gp::DX()); The same occurs with construction from gp_Ax1: gp_Ax1 anAx1 (gp::Origin(), gp::DX()); anAx.SetAxis (anAx1); | ||||||||||||
Steps To Reproduce | . | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | |||||||||||||
![]() |
|||||||
|
![]() |
|
(0073368) git (administrator) 2018-01-11 19:03 |
Branch CR29406 has been created by isn. SHA-1: 7f911703334699158a648a55bb13648fe862593e Detailed log of new commits: Author: isn Date: Thu Jan 11 19:03:03 2018 +0300 0029406: Foundation Classes - gp_Ax3 fails setting direction Avoid exception in gp_Ax3::SetDirection(), SetAxis(): check if XDir of Ax3 is parallel to newly given direction. |
(0073433) isn (developer) 2018-01-16 14:05 edited on: 2018-01-16 14:05 |
/view/CR29406-master-isn/view/COMPARE/ |
(0073460) msv (developer) 2018-01-17 11:42 |
Please rebase the branch on current master and re-test. The commit must be based on master only (not on 28642 fix). |
(0073464) git (administrator) 2018-01-17 12:41 |
Branch CR29406 has been updated forcibly by isn. SHA-1: af061f95c6a6e94dbdde77558332f25b870f95b8 |
(0073468) msv (developer) 2018-01-17 13:00 |
tests/bugs/fclasses/bug29406 - Add standard header into the test script. src/gp/gp_Ax3.lxx - 47,71: move this definition to the scope where it is used. src/QABugs/QABugs_20.cxx - 2803: set negative DX. - Eliminate code duplication by defining a new function that makes needed checks and puts error in cout. No need to return 1 for the test became failure. - Add checking of the fact that direction in the object has the value that has been just set. |
(0073496) git (administrator) 2018-01-18 17:06 |
Branch CR29406 has been updated by isn. SHA-1: 9212f218bf2a24e3f668ca5f9d2b999b029bb461 Detailed log of new commits: Author: isn Date: Thu Jan 18 17:06:04 2018 +0300 corrections |
(0073507) msv (developer) 2018-01-19 10:25 |
Reviewed. |
(0073508) msv (developer) 2018-01-19 10:36 edited on: 2018-01-19 10:37 |
Oops, I have (thanks to EMV) another remark. Please, remove code duplication in the methods gp_Ax3::SetAxis and gp_Ax3::SetDirection. For that, make the following implementation of the method gp_Ax3::SetAxis: axis.SetLocation(A1.Location()); SetDirection(A1.Direction()); |
(0073526) git (administrator) 2018-01-19 14:36 |
Branch CR29406 has been updated by isn. SHA-1: 360a7e4b1ab493f47fcd2feb74b8ff350219f547 Detailed log of new commits: Author: isn Date: Fri Jan 19 14:33:52 2018 +0300 remark |
(0073539) isn (developer) 2018-01-19 17:29 |
/view/CR29406-master-isn/view |
(0073551) msv (developer) 2018-01-22 10:31 |
Please rebase on current master and retest. |
(0073557) git (administrator) 2018-01-22 14:08 |
Branch CR29406_1 has been created by isn. SHA-1: 7bdbef9da526f872b1798e03ab81809147d2d492 Detailed log of new commits: Author: isn Date: Thu Jan 11 19:03:03 2018 +0300 0029406: Foundation Classes - gp_Ax3 fails setting direction Avoid exception in gp_Ax3::SetDirection(), SetAxis(): check if XDir of Ax3 is parallel to newly given direction. |
![]() |
|||
Date Modified | Username | Field | Change |
2017-12-29 13:51 | abv | New Issue | |
2017-12-29 13:51 | abv | Assigned To | => abv |
2018-01-09 14:36 | abv | Description Updated | View Revisions |
2018-01-09 14:37 | abv | Description Updated | View Revisions |
2018-01-10 16:57 | abv | Assigned To | abv => isn |
2018-01-10 16:57 | abv | Status | new => assigned |
2018-01-11 19:03 | git | Note Added: 0073368 | |
2018-01-16 14:05 | isn | Note Added: 0073433 | |
2018-01-16 14:05 | isn | Assigned To | isn => msv |
2018-01-16 14:05 | isn | Status | assigned => resolved |
2018-01-16 14:05 | isn | Steps to Reproduce Updated | View Revisions |
2018-01-16 14:05 | isn | Note Edited: 0073433 | View Revisions |
2018-01-17 11:42 | msv | Note Added: 0073460 | |
2018-01-17 11:42 | msv | Assigned To | msv => isn |
2018-01-17 11:42 | msv | Status | resolved => assigned |
2018-01-17 12:41 | git | Note Added: 0073464 | |
2018-01-17 13:00 | msv | Note Added: 0073468 | |
2018-01-18 17:06 | git | Note Added: 0073496 | |
2018-01-18 20:50 | isn | Assigned To | isn => msv |
2018-01-18 20:50 | isn | Status | assigned => resolved |
2018-01-19 10:25 | msv | Note Added: 0073507 | |
2018-01-19 10:25 | msv | Assigned To | msv => bugmaster |
2018-01-19 10:25 | msv | Status | resolved => reviewed |
2018-01-19 10:36 | msv | Note Added: 0073508 | |
2018-01-19 10:36 | msv | Assigned To | bugmaster => isn |
2018-01-19 10:36 | msv | Status | reviewed => assigned |
2018-01-19 10:37 | msv | Note Edited: 0073508 | View Revisions |
2018-01-19 10:37 | msv | Note Edited: 0073508 | View Revisions |
2018-01-19 14:36 | git | Note Added: 0073526 | |
2018-01-19 17:29 | isn | Note Added: 0073539 | |
2018-01-19 17:29 | isn | Assigned To | isn => msv |
2018-01-19 17:29 | isn | Status | assigned => resolved |
2018-01-22 10:31 | msv | Note Added: 0073551 | |
2018-01-22 10:31 | msv | Assigned To | msv => isn |
2018-01-22 10:31 | msv | Status | resolved => assigned |
2018-01-22 14:08 | git | Note Added: 0073557 | |
2019-07-10 22:29 | abv | Target Version | 7.4.0 => 7.5.0 |
2019-09-04 18:03 | kgv | Relationship added | related to 0029671 |
2020-09-11 16:13 | utverdov | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |