0029406: Foundation Classes - gp_Ax3 fails setting direction

Avoid exception in gp_Ax3::SetDirection(), SetAxis(): check if XDir of Ax3 is parallel to newly given direction.